# bossa

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  toolchain-arm64.cmake
.github/: copilot-instructions.md
.github/workflows/: build-and-test.yml  cleanup-test-telemetry.yml  formatting.yml
config/: bossa.service
config/examples/: config-sim-test.yaml  config.yaml
docs/: guidelines.md  phase-1-core-runtime.md  phase-2-io-driver.md  phase-3-telemetry-pipeline.md  roadmap.md  specification.md
docs/hardware/: pi5-bme280-smoke-test.md
drivers/bme280/: bme280_driver.cpp  bme280_driver.hpp
drivers/sim/: sim_driver.cpp  sim_driver.hpp
include/bossa/: service.hpp
include/bossa/core/: config.hpp  service.hpp  test_identity.hpp
include/bossa/drivers/: driver.hpp  registry.hpp
include/bossa/io/: gpio_controller.hpp  i2c_bus.hpp  libgpiod_gpio.hpp  linux_i2c_bus.hpp
include/bossa/runtime/: telemetry_runtime.hpp
include/bossa/storage/: local_store.hpp
include/bossa/sync/: curl_http_client.hpp  http_client.hpp  http_uploader.hpp  upload_policy.hpp
include/bossa/telemetry/: channel.hpp  ring_buffer.hpp  sample.hpp  scheduler.hpp  stored_sample.hpp
scripts/: build.sh  clang.sh  env.sh  setup.sh  sync.sh
scripts/check/: formatting.sh  pre_push.sh
scripts/ops/: cleanup_test_telemetry.sh
scripts/test/: pi5_bme280_smoke.sh  unit.sh
src/: daemon_main.cpp  main.cpp  service.cpp
src/core/: config.cpp  service.cpp
src/drivers/: registry.cpp
src/io/: libgpiod_gpio.cpp  linux_i2c_bus.cpp
src/runtime/: telemetry_runtime.cpp
src/storage/: local_store.cpp
src/sync/: curl_http_client.cpp  http_uploader.cpp  upload_policy.cpp
src/telemetry/: ring_buffer.cpp  scheduler.cpp
src/tools/: bme280_smoke_main.cpp
tests/core/: config_test.cpp  daemon_integration_test.cpp  service_test.cpp
tests/drivers/: bme280_driver_test.cpp
tests/mocks/: mock_gpio.cpp  mock_gpio.hpp  mock_i2c_bus.cpp  mock_i2c_bus.hpp
tests/runtime/: telemetry_pipeline_test.cpp
tests/storage/: local_store_test.cpp
tests/sync/: http_uploader_test.cpp  upload_policy_test.cpp
tests/telemetry/: ring_buffer_test.cpp  scheduler_test.cpp
